unpackaged/main/default/objects/bt_stripe__Company__c/fields/bt_stripe__Description__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Description__c</fullName>
    <description>The description of this company.</description>
    <inlineHelpText>The description of this company.</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>