unpackaged/main/default/objects/bt_stripe__Company__c/fields/bt_stripe__EIN__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__EIN__c</fullName>
    <description>The Employer Identification Number (EIN) for the company.</description>
    <inlineHelpText>The Employer Identification Number (EIN) for the company.</inlineHelpText>
    <label>EIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>