unpackaged/main/default/objects/bt_stripe__Company__c/fields/bt_stripe__Email__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Email__c</fullName>
    <description>The primary email for the company.</description>
    <inlineHelpText>The primary email for the company.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>