unpackaged/main/default/objects/bt_stripe__Company__c/fields/bt_stripe__FY_Start_Month__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__FY_Start_Month__c</fullName>
    <description>The starting month of the fiscal year for the company.</description>
    <inlineHelpText>The starting month of the fiscal year for the company.</inlineHelpText>
    <label>FY Start Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>January</fullName>
            </value>
            <value>
                <fullName>February</fullName>
            </value>
            <value>
                <fullName>March</fullName>
            </value>
            <value>
                <fullName>April</fullName>
            </value>
            <value>
                <fullName>May</fullName>
            </value>
            <value>
                <fullName>June</fullName>
            </value>
            <value>
                <fullName>July</fullName>
            </value>
            <value>
                <fullName>August</fullName>
            </value>
            <value>
                <fullName>September</fullName>
            </value>
            <value>
                <fullName>October</fullName>
            </value>
            <value>
                <fullName>November</fullName>
            </value>
            <value>
                <fullName>December</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>