unpackaged/main/default/objects/bt_stripe__Company__c/fields/bt_stripe__Logo__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Logo__c</fullName>
    <description>The logo for the company, displayed on PayLink and DocumentLink.</description>
    <inlineHelpText>The logo for the company, displayed on PayLink and DocumentLink.</inlineHelpText>
    <label>Logo</label>
    <type>Url</type>
</CustomField>