unpackaged/main/default/objects/bt_stripe__Company__c/fields/bt_stripe__Merchant_Category_Code__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Merchant_Category_Code__c</fullName>
    <description>The merchant category code for the account. MCCs are used to classify businesses based on the goods or services they provide.</description>
    <inlineHelpText>The merchant category code for the account. MCCs are used to classify businesses based on the goods or services they provide.</inlineHelpText>
    <label>Merchant Category Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>