unpackaged/main/default/objects/bt_stripe__Company__c/fields/bt_stripe__Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Registration_Number__c</fullName>
    <description>A registration number for the company, aside from the EIN, if applicable.</description>
    <inlineHelpText>A registration number for the company, aside from the EIN, if applicable.</inlineHelpText>
    <label>Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>