unpackaged/main/default/objects/bt_stripe__Company__c/fields/bt_stripe__Street_Address__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Street_Address__c</fullName>
    <description>Official company address.</description>
    <inlineHelpText>Official company address.</inlineHelpText>
    <label>Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>