unpackaged/main/default/objects/bt_stripe__Company__c/fields/bt_stripe__Support_Email__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Support_Email__c</fullName>
    <label>Support Email</label>
    <type>Email</type>
</CustomField>