unpackaged/main/default/objects/bt_stripe__Company__c/fields/bt_stripe__VAT__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__VAT__c</fullName>
    <label>VAT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>