unpackaged/main/default/objects/bt_stripe__Company__c/listViews/bt_stripe__All.listView-meta.xml
<ListView>
    <fullName>bt_stripe__All</fullName>
    <columns>NAME</columns>
    <columns>bt_stripe__Currency_ISO__c</columns>
    <columns>bt_stripe__Description__c</columns>
    <columns>bt_stripe__EIN__c</columns>
    <columns>bt_stripe__Email__c</columns>
    <columns>bt_stripe__FY_Start_Month__c</columns>
    <columns>bt_stripe__Phone__c</columns>
    <columns>bt_stripe__Registration_Number__c</columns>
    <columns>bt_stripe__Website__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>